# inception-external-recommender

./: .coveragerc  .gitignore  .travis.yaml  .travis.yml  Makefile  README.md  Tutorial.ipynb  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: run_tests.yml
ariadne/: __init__.py  __version__.py  classifier.py  constants.py  locking.py  modelmanager.py  protocol.py  server.py  util.py
ariadne/contrib/: HuggingFaceTransformer.py  __init__.py  adapters.py  flair.py  inception_util.py  jieba.py  log_only.py  nltk.py  sbert.py  simalign.py  sklearn.py  spacy.py  stringmatcher.py  transformers.py
ariadne/demo/: demo_link_feature.py  demo_list_types.py  demo_multiple_features.py  demo_relation.py  demo_string_array_feature.py  demo_string_feature.py
examples/requests/: predict_sentence_sentiment.json  predict_wikigold_ner.json  training_sentence_sentiment.json
inception_external_recommender/: classifier.py  modelmanager.py  protocol.py  server.py  util.py
inception_external_recommender/contrib/: sklearn.py  spacy.py
scripts/: convert_imdb_reviews.py  convert_sentiment_labelled_sentences.py  tester.py  util.py
tests/: test_adapter_recommender.py  test_demo_relation.py  test_inception_util.py  test_jieba_segmenter.py  test_sbert_sentence_classifier.py  test_simalign.py  test_sklearn_sentence_classifier.py  test_spacy_recommender.py  test_transformer_recommender.py  util.py
tests/contrib/: test_adapter_recommender.py  test_jieba_segmenter.py  test_sbert_sentence_classifier.py  test_simalign.py  test_sklearn_sentence_classifier.py  test_transformer_recommender.py
tests/data/: INCEpTION_TypeSystem.xml
tests/demo/: test_demo_multiple_features.py  test_demo_relation.py  test_demo_string_array_feature.py  test_demo_string_feature.py
tests/resources/: Wikipedia-Obama.xmi  __init__.py
